--- a/storybook/stories/components/buttons/dot-menu.stories.mdx
+++ b/storybook/stories/components/buttons/dot-menu.stories.mdx
@@ -1,8 +1,9 @@
+
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 
 import { decorators } from '../../decorators'
 import {
-  DotMenu, DotMenuItem
+  DotMenu, DotMenuItem,
 } from '../../../../src'
 
 <Meta
