--- a/storybook/stories/components/checkboxes/common-checkbox.stories.mdx
+++ b/storybook/stories/components/checkboxes/common-checkbox.stories.mdx
@@ -8,7 +8,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => <CommonCheckbox {...args} />
+export const Template = args => <CommonCheckbox {...args} />
 
 <Story
   name="Checked"
