--- a/storybook/stories/components/date-picker/date-picker-button.stories.mdx
+++ b/storybook/stories/components/date-picker/date-picker-button.stories.mdx
@@ -19,7 +19,7 @@ export const TemplateDatePickerButton = (args) => {
         value: '2020-10-25',
       }}
       renderButton={showPicker => (
-        <button onClick={showPicker}>Show Picker</button>
+        <button type="button" onClick={showPicker}>Show Picker</button>
       )}
       {...onSelectDate}
     />
