--- a/storybook/stories/components/input/controlled-input.stories.mdx
+++ b/storybook/stories/components/input/controlled-input.stories.mdx
@@ -11,7 +11,7 @@ import { CustomControlledInput } from './controlled-input'
 
 **TODO: Extract corporate design input that encapsulates the basic styling**
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <CustomControlledInput
@@ -41,4 +41,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
