--- a/storybook/stories/components/selection-menus/filtering/filtering.stories.mdx
+++ b/storybook/stories/components/selection-menus/filtering/filtering.stories.mdx
@@ -9,7 +9,7 @@ import { DemoFilterBoxWithResultList } from './filter-box'
   decorators={decorators}
 />
 
-export const Template = (args) => <DemoFilterBoxWithResultList {...args} />
+export const Template = args => <DemoFilterBoxWithResultList {...args} />
 
 # Filter box with a list of example items
 <Story
