--- a/storybook/stories/components/selection-menus/sorting/sorting.stories.mdx
+++ b/storybook/stories/components/selection-menus/sorting/sorting.stories.mdx
@@ -10,7 +10,7 @@ import { SortBoxWithSampleList } from './sort-box-with-sample-list'
   decorators={decorators}
 />
 
-export const Template = (args) => <SortBoxWithSampleList {...args} />
+export const Template = args => <SortBoxWithSampleList {...args} />
 
 # Sort box with a list of example items
 This component sorts a given list of objects
