--- a/storybook/stories/components/selects/common-select.stories.mdx
+++ b/storybook/stories/components/selects/common-select.stories.mdx
@@ -54,10 +54,10 @@ export const Template = (args) => {
 
 # Outlined with label
 <Story
- name="Outlined with label"
+  name="Outlined with label"
   args={{
     variant: 'outlined',
-    label: "some label"
+    label: 'some label',
   }}
 >
   {Template.bind({})}
