--- a/storybook/stories/styles/typography/typography.stories.mdx
+++ b/storybook/stories/styles/typography/typography.stories.mdx
@@ -41,7 +41,7 @@ import { decorators } from '../../decorators'
         <Typography variant="body1">Body 1</Typography>
       </Grid>
       <Grid item>
-        <Link variant="body1">Body 1 Link</Link>
+        <Link href="http://url1.com" variant="body1">Body 1 Link</Link>
       </Grid>
     </Grid>
     <Grid container item direction="column" spacing={1}>
@@ -49,7 +49,7 @@ import { decorators } from '../../decorators'
         <Typography variant="body2">Body 2</Typography>
       </Grid>
       <Grid item>
-        <Link variant="body2">Body 2 Link</Link>
+        <Link href="http://url2.com" variant="body2">Body 2 Link</Link>
       </Grid>
     </Grid>
   </Grid>
