--- a/storybook/stories/components/accordions/non-collapsing-headline.stories.mdx
+++ b/storybook/stories/components/accordions/non-collapsing-headline.stories.mdx
@@ -1,7 +1,8 @@
+
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 
 import {
-  Accordion, AccordionDetails, Typography, Grid,
+  Accordion, AccordionDetails, Typography,
 } from '@material-ui/core'
 
 import {
@@ -14,7 +15,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Accordion {...args}>
     <NonCollapsingAccordionSummary>
       This headline will not shrink when collapsed
@@ -51,4 +52,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
