--- a/storybook/stories/components/calendars/calendars.stories.mdx
+++ b/storybook/stories/components/calendars/calendars.stories.mdx
@@ -1,4 +1,4 @@
-import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks'
+import { Meta, Story } from '@storybook/addon-docs/blocks'
 
 import { decorators } from '../../decorators'
 
@@ -7,7 +7,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => <div {...args} />
+export const Template = args => <div {...args} />
 
 # TODO
 
@@ -17,4 +17,3 @@ export const Template = (args) => <div {...args} />
 >
   {Template.bind({})}
 </Story>
-
