--- a/storybook/stories/components/errors/error-boundary.stories.mdx
+++ b/storybook/stories/components/errors/error-boundary.stories.mdx
@@ -8,7 +8,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const TemplateErrorBoundary = (args) => (
+export const TemplateErrorBoundary = args => (
   <ErrorComponent
     {...args}
     title="Some Error"
