--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -9,7 +9,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item xs={1} container direction="row" spacing={1}>
       <Grid item>
@@ -29,4 +29,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
