--- a/storybook/stories/components/input/dialog-box-input.stories.mdx
+++ b/storybook/stories/components/input/dialog-box-input.stories.mdx
@@ -10,7 +10,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <DefaultDialog title="Some Dialog" buttons={[]} open>
