--- a/storybook/stories/components/input/input-with-label.stories.mdx
+++ b/storybook/stories/components/input/input-with-label.stories.mdx
@@ -10,7 +10,7 @@ import { CustomControlledInput } from './controlled-input'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <InputWithLabel label="Full Name">
