--- a/storybook/stories/components/input/number-input.stories.mdx
+++ b/storybook/stories/components/input/number-input.stories.mdx
@@ -9,7 +9,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <NumberInput
@@ -39,4 +39,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
