--- a/storybook/stories/components/input/rich-text-editor.stories.mdx
+++ b/storybook/stories/components/input/rich-text-editor.stories.mdx
@@ -9,11 +9,11 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <RichTextEditor
-        placeholder={'type something'}
+        placeholder="type something"
         fixedHeight={150}
         onSave={() => {}}
         {...args}
