--- a/storybook/stories/components/input/rich-text-input.stories.mdx
+++ b/storybook/stories/components/input/rich-text-input.stories.mdx
@@ -9,7 +9,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <RichTextInput
@@ -43,4 +43,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
