--- a/storybook/stories/components/labels/badges.stories.mdx
+++ b/storybook/stories/components/labels/badges.stories.mdx
@@ -9,7 +9,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const TemplateBadges = (args) => (
+export const TemplateBadges = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <Badge text="responsible" {...args} />
