--- a/storybook/stories/components/lists/lists.stories.mdx
+++ b/storybook/stories/components/lists/lists.stories.mdx
@@ -1,4 +1,4 @@
-import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks'
+import { Meta, Story } from '@storybook/addon-docs/blocks'
 
 import { decorators } from '../../decorators'
 
@@ -7,7 +7,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <div {...args}>
     TODO
   </div>
@@ -21,4 +21,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
