--- a/storybook/stories/components/pending-states/skeletons.stories.mdx
+++ b/storybook/stories/components/pending-states/skeletons.stories.mdx
@@ -8,7 +8,7 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => <Skeleton {...args} />
+export const Template = args => <Skeleton {...args} />
 
 # Rectangular
 <Story
@@ -27,9 +27,8 @@ export const Template = (args) => <Skeleton {...args} />
   args={{
     width: '5em',
     height: '5em',
-    variant: 'circle'
+    variant: 'circle',
   }}
 >
   {Template.bind({})}
 </Story>
-
