--- a/storybook/stories/components/selection-menus/status/status.stories.mdx
+++ b/storybook/stories/components/selection-menus/status/status.stories.mdx
@@ -7,7 +7,7 @@ import { decorators } from '../../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => <div {...args}>TODO</div>
+export const Template = args => <div {...args}>TODO</div>
 
 <Story
   name="Default"
@@ -15,4 +15,3 @@ export const Template = (args) => <div {...args}>TODO</div>
 >
   {Template.bind({})}
 </Story>
-
