--- a/storybook/stories/components/snackbars/hints/hints.stories.mdx
+++ b/storybook/stories/components/snackbars/hints/hints.stories.mdx
@@ -8,7 +8,7 @@ import { decorators } from '../../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = () => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       TODO
@@ -24,4 +24,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
