--- a/storybook/stories/components/snackbars/snackbar/snackbar.stories.mdx
+++ b/storybook/stories/components/snackbars/snackbar/snackbar.stories.mdx
@@ -10,7 +10,7 @@ import { SnackBarWithButton } from './snackbar'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
       <SnackBarWithButton {...args} />
@@ -41,4 +41,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
