--- a/storybook/stories/components/tooltips/common-tooltip.stories.mdx
+++ b/storybook/stories/components/tooltips/common-tooltip.stories.mdx
@@ -9,10 +9,10 @@ import { decorators } from '../../decorators'
   decorators={decorators}
 />
 
-export const Template = (args) => (
+export const Template = args => (
   <Grid container direction="column" spacing={1}>
     <Grid item>
-      <CommonTooltip title="Common tooltip">
+      <CommonTooltip title="Common tooltip" {...args}>
         <div style={{ width: '200px' }}>Hover this text to show tooltip</div>
       </CommonTooltip>
     </Grid>
@@ -27,4 +27,3 @@ export const Template = (args) => (
 >
   {Template.bind({})}
 </Story>
-
