--- a/storybook/stories/styles/colors/colors.stories.mdx
+++ b/storybook/stories/styles/colors/colors.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 import { Grid } from '@material-ui/core'
 
-import { ColorItem, theme } from './color-item'
+import { ColorItem } from './color-item'
 import { decorators } from '../../decorators'
 import { colorCategories, uncategorizedColors } from './color-categories'
 
