PA-7106 Fix linter errors

--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -1,7 +1,12 @@
-import { Grid } from '@material-ui/core'
+import { Grid, Typography } from '@material-ui/core'
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 
-import { WarningIcon, WarningIconWithTooltip, MilestoneIcon, SummaryIcon } from '../../../../src/icons'
+import {
+  WarningIcon,
+  WarningIconWithTooltip,
+  MilestoneIcon,
+  SummaryIcon,
+} from '../../../../src/icons'
 import { decorators } from '../../decorators'
 
 <Meta
