PA-6985[review]: change toggle-button written in typescript & update className prop value usuage

--- a/storybook/stories/components/toggle/toggle.stories.mdx
+++ b/storybook/stories/components/toggle/toggle.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 
 import { decorators } from '../../decorators'
-import { renderToggles } from './render-toggles'
+import { RenderToggles } from './render-toggles'
 
 <Meta
   title="Components/Toggle/Common Toggles"
@@ -9,7 +9,7 @@ import { renderToggles } from './render-toggles'
 />
 
 export const Template = (args = {}) => (
-  renderToggles(args)
+  RenderToggles(args)
 )
 
 # Toggle / Large
