PA-7258 Change component name for milestone icon

--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -5,7 +5,7 @@ import {
   WarningIcon,
   WarningIconWithTooltip,
   MilestoneIcon,
-  MilestoneIcon24,
+  MsIcon,
   SummaryIcon,
 } from '../../../../src/icons'
 import {
@@ -55,19 +55,19 @@ export const Template = args => (
         <Typography>Milestones 24px</Typography>
       </Grid>
       <Grid item style={{ color: '#466ADA' }}>
-        <MilestoneIcon24 type={MilestoneIconType.NORMAL} />
+        <MsIcon type={MilestoneIconType.NORMAL} />
       </Grid>
       <Grid item style={{ color: '#466ADA' }}>
-        <MilestoneIcon24 type={MilestoneIconType.FLEXIBLE} />
+        <MsIcon type={MilestoneIconType.FLEXIBLE} />
       </Grid>
       <Grid item style={{ color: '#466ADA' }}>
-        <MilestoneIcon24 type={MilestoneIconType.WITH_BUFFER} />
+        <MsIcon type={MilestoneIconType.WITH_BUFFER} />
       </Grid>
       <Grid item style={{ color: '#466ADA' }}>
-        <MilestoneIcon24 type={MilestoneIconType.WITH_DELAY} />
+        <MsIcon type={MilestoneIconType.WITH_DELAY} />
       </Grid>
       <Grid item style={{ color: '#466ADA' }}>
-        <MilestoneIcon24 type={MilestoneIconType.COMPLETED} />
+        <MsIcon type={MilestoneIconType.COMPLETED} />
       </Grid>
     </Grid>
   </Grid>
