PA-7515: Convert to typescript

--- a/storybook/stories/components/member-avatars-and-buttons/user-avatar/user-avatar.stories.mdx
+++ b/storybook/stories/components/member-avatars-and-buttons/user-avatar/user-avatar.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks'
 import { Grid } from '@material-ui/core'
 
-import { UserAvatar, _UserAvatar } from '../../../../../src/components/user-avatar'
+import { UserAvatar } from '../../../../../src/components/user-avatar'
 
 import { decorators } from '../../../decorators'
 import { makeSampleUser, forEachSize } from '../utils'
@@ -14,7 +14,7 @@ import { makeSampleUser, forEachSize } from '../utils'
 # User avatar
 
 ## Component API
-<ArgsTable of={_UserAvatar} />
+<ArgsTable of={UserAvatar} />
 
 ## Avatar Initials
 <Story name="Avatar Initials">
