PA-7459 Remove invalid properties
- width and height are no valid props for SvgIcon
- use the fontSize prop to determine the icon size

--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -54,19 +54,19 @@ export const Template = args => (
       <Grid item>
         <Typography>Milestones 24px</Typography>
       </Grid>
-      <Grid item style={{ color: '#466ADA' }}>
+      <Grid item>
         <MsIcon type={MilestoneIconType.NORMAL} />
       </Grid>
-      <Grid item style={{ color: '#466ADA' }}>
+      <Grid item>
         <MsIcon type={MilestoneIconType.FLEXIBLE} />
       </Grid>
-      <Grid item style={{ color: '#466ADA' }}>
+      <Grid item>
         <MsIcon type={MilestoneIconType.WITH_BUFFER} />
       </Grid>
-      <Grid item style={{ color: '#466ADA' }}>
+      <Grid item>
         <MsIcon type={MilestoneIconType.WITH_DELAY} />
       </Grid>
-      <Grid item style={{ color: '#466ADA' }}>
+      <Grid item>
         <MsIcon type={MilestoneIconType.COMPLETED} />
       </Grid>
     </Grid>
