PA-7459 Add 20px milestone icons to storybook

--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -70,6 +70,26 @@ export const Template = args => (
         <MsIcon type={MilestoneIconType.COMPLETED} />
       </Grid>
     </Grid>
+    <Grid item xs={6} container direction="row" spacing={3}>
+      <Grid item>
+        <Typography>Milestones 20px</Typography>
+      </Grid>
+      <Grid item>
+        <MsIcon fontSize="small" type={MilestoneIconType.NORMAL} />
+      </Grid>
+      <Grid item>
+        <MsIcon fontSize="small" type={MilestoneIconType.FLEXIBLE} />
+      </Grid>
+      <Grid item>
+        <MsIcon fontSize="small" type={MilestoneIconType.WITH_BUFFER} />
+      </Grid>
+      <Grid item>
+        <MsIcon fontSize="small" type={MilestoneIconType.WITH_DELAY} />
+      </Grid>
+      <Grid item>
+        <MsIcon fontSize="small" type={MilestoneIconType.COMPLETED} />
+      </Grid>
+    </Grid>
   </Grid>
 )
 
