PA-8782: Add `size` property to dot menu

--- a/storybook/stories/components/buttons/dot-menu.stories.mdx
+++ b/storybook/stories/components/buttons/dot-menu.stories.mdx
@@ -17,10 +17,22 @@ export const Template = (args = {}) => (
   </DotMenu>
 )
 
-# Default
+# Size default
 <Story
-  name="Default"
-  args={{}}
+  name="Size default"
+  args={{
+    size: 'default',
+  }}
+>
+  {Template.bind({})}
+</Story>
+
+# Size small
+<Story
+  name="Size Small"
+  args={{
+    size: 'small',
+  }}
 >
   {Template.bind({})}
 </Story>
