--- a/static/i18n/en-US/translations.json
+++ b/static/i18n/en-US/translations.json
@@ -15,5 +15,6 @@
     "Do you want to save the changes?": "Do you want to save the changes?",
     "Don't save": "Don't save",
     "Save changes": "Save changes",
-    "Otherwise your changes will not be saved.": "Otherwise your changes will not be saved."
+    "Otherwise your changes will not be saved.": "Otherwise your changes will not be saved.",
+    "Calendar week": "Calendar week"
 }
