PA-9427: Add storybook example with min/max dates

--- a/storybook/stories/components/date-picker/date-picker.stories.mdx
+++ b/storybook/stories/components/date-picker/date-picker.stories.mdx
@@ -24,3 +24,15 @@ export const TemplateDatePicker = (args) => {
 >
   {TemplateDatePicker.bind({})}
 </Story>
+
+# With min and max date
+<Story
+  name="With min and max date"
+  args={{
+    minDate: '2021-01-05',
+    maxDate: '2021-01-15',
+    value: '2021-01-08',
+  }}
+>
+  {TemplateDatePicker.bind({})}
+</Story>
