PA-9480: [REVIEW] Merge handling of disableWeekends and shouldDisableDate

--- a/storybook/stories/components/date-picker/date-picker.stories.mdx
+++ b/storybook/stories/components/date-picker/date-picker.stories.mdx
@@ -36,3 +36,14 @@ export const TemplateDatePicker = (args) => {
 >
   {TemplateDatePicker.bind({})}
 </Story>
+
+# With disableWeekends
+<Story
+  name="With disabled weekends"
+  args={{
+    value: '2021-01-08',
+    disableWeekends: true,
+  }}
+>
+  {TemplateDatePicker.bind({})}
+</Story>
