PA-9894 Use date-fns instead of js-joda - format date not working with js-joda

--- a/storybook/stories/components/date-picker/date-range-box.stories.mdx
+++ b/storybook/stories/components/date-picker/date-range-box.stories.mdx
@@ -32,3 +32,15 @@ export const TemplateDateRangePicker = (args) => {
 >
   {TemplateDateRangePicker.bind({})}
 </Story>
+
+# Date Range Picker for german
+<Story
+  name="German language"
+  args={{
+    language: 'de',
+    start: '2021-05-11',
+    end: '2021-05-11',
+  }}
+>
+  {TemplateDateRangePicker.bind({})}
+</Story>
