--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -13,6 +13,7 @@ import {
   MilestoneIconType,
 } from '../../../../src/icons/milestone-constants'
 import { decorators } from '../../decorators'
+import { AddColumnIcon } from '../../../../src/icons/add-column-icon'
 
 <Meta
   title="Components/Icons/Showcase"
@@ -108,6 +109,14 @@ export const Template = args => (
         <VacationSmileyIcon />
       </Grid>
     </Grid>
+      <Grid item xs={2} container direction="row" spacing={2}>
+          <Grid item>
+              <Typography>Add column</Typography>
+          </Grid>
+          <Grid item>
+              <AddColumnIcon />
+          </Grid>
+      </Grid>
   </Grid>
 )
 
