--- a/storybook/stories/components/icons/generic-icon.stories.mdx
+++ b/storybook/stories/components/icons/generic-icon.stories.mdx
@@ -6,7 +6,6 @@ import keyBy from 'lodash/keyBy'
 import mapValues from 'lodash/mapValues'
 
 import Typography from '@material-ui/core/Typography'
-import { GenericIcon } from '../../../../src/icons'
 import { decorators } from '../../decorators'
 import {
   IconColor,
@@ -15,7 +14,8 @@ import {
   IconMargin,
   IconSize,
   SummaryIcon,
-} from '../../../../lib'
+  GenericIcon,
+} from '../../../../src/icons'
 
 <Meta
   title="Components/Icons/GenericIcon"
