Fix storybook for `GenericIcon`
The `SummaryIcon` uses a `GenericIcon` internally and should not be wrapped with a `GenericIcon` again. This would cause a type error, if the `mdx` file supported typescript.

--- a/storybook/stories/components/icons/generic-icon.stories.mdx
+++ b/storybook/stories/components/icons/generic-icon.stories.mdx
@@ -16,7 +16,6 @@ import {
   IconMargin,
   IconSize,
   SummaryIcon,
-  GenericIcon,
 } from '../../../../src/icons'
 
 <Meta
@@ -78,7 +77,7 @@ export const Template = () => {
                   {size}
                 </Typography>
                 <div style={{ border: showBorder ? '1px solid grey' : '' }}>
-                  <GenericIcon
+                  <SummaryIcon
                     size={size}
                     Icon={selectedIcon}
                     color={colors}
