--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -21,8 +21,11 @@ import { AddColumnIcon } from '../../../../src/icons/add-column-icon'
 />
 
 export const Template = args => (
-  <Grid container direction="column" spacing={1}>
-    <Grid item xs={1} container direction="row" spacing={1}>
+  <Grid container direction="column" spacing={4}>
+    <Grid item xs={12} container direction="row" spacing={1}>
+      <Grid item>
+        <Typography>WarningIconWithTooltip</Typography>
+      </Grid>
       <Grid item>
         <WarningIcon {...args} />
       </Grid>
@@ -30,25 +33,17 @@ export const Template = args => (
         <WarningIconWithTooltip {...args} tooltipText="A description of the warning" />
       </Grid>
     </Grid>
-    <Grid item xs={2} container direction="row" spacing={2}>
+    <Grid item xs={12} container direction="row" spacing={2}>
       <Grid item>
-        <Typography>Fixed Milestone</Typography>
-      </Grid>
-      <Grid item>
-        <Typography>Flexible Milestone</Typography>
-      </Grid>
-    </Grid>
-    <Grid item xs={2} container direction="row" spacing={2}>
-      <Grid item>
-        <Typography>Summary</Typography>
+        <Typography>SummaryIcon</Typography>
       </Grid>
       <Grid item style={{ color: '#466ADA' }}>
         <SummaryIcon />
       </Grid>
     </Grid>
-    <Grid item xs={6} container direction="row" spacing={3}>
+    <Grid item xs={12} container direction="row" spacing={3}>
       <Grid item>
-        <Typography>Milestones 24px</Typography>
+        <Typography>MsIcon 24px</Typography>
       </Grid>
       <Grid item>
         <MsIcon type={MilestoneIconType.NORMAL} />
@@ -66,9 +61,9 @@ export const Template = args => (
         <MsIcon type={MilestoneIconType.COMPLETED} />
       </Grid>
     </Grid>
-    <Grid item xs={6} container direction="row" spacing={3}>
+    <Grid item xs={12} container direction="row" spacing={3}>
       <Grid item>
-        <Typography>Milestones 20px</Typography>
+        <Typography>MsIcon 20px</Typography>
       </Grid>
       <Grid item>
         <MsIcon fontSize="small" type={MilestoneIconType.NORMAL} />
@@ -86,9 +81,9 @@ export const Template = args => (
         <MsIcon fontSize="small" type={MilestoneIconType.COMPLETED} />
       </Grid>
     </Grid>
-    <Grid item xs={2} container direction="row" spacing={2}>
+    <Grid item xs={12} container direction="row" spacing={2}>
       <Grid item>
-        <Typography>Fixed dates</Typography>
+        <Typography>FixedDatesIcon</Typography>
       </Grid>
       <Grid item>
         <FixedDatesIcon
@@ -101,22 +96,22 @@ export const Template = args => (
         />
       </Grid>
     </Grid>
-    <Grid item xs={2} container direction="row" spacing={2}>
+    <Grid item xs={12} container direction="row" spacing={2}>
       <Grid item>
-        <Typography>Vacation smiley</Typography>
+        <Typography>VacationSmileyIcon</Typography>
       </Grid>
       <Grid item>
         <VacationSmileyIcon />
       </Grid>
     </Grid>
-      <Grid item xs={2} container direction="row" spacing={2}>
-          <Grid item>
-              <Typography>Add column</Typography>
-          </Grid>
-          <Grid item>
-              <AddColumnIcon />
-          </Grid>
+    <Grid item xs={12} container direction="row" spacing={2}>
+      <Grid item>
+        <Typography>AddColumnIcon</Typography>
       </Grid>
+      <Grid item>
+        <AddColumnIcon />
+      </Grid>
+    </Grid>
   </Grid>
 )
 
