Fix api documentation of `GenericIcon`

--- a/storybook/stories/components/icons/generic-icon.stories.mdx
+++ b/storybook/stories/components/icons/generic-icon.stories.mdx
@@ -16,6 +16,7 @@ import {
   IconMargin,
   IconSize,
   GenericIcon,
+  GenericIcon_,
 } from '../../../../src/icons'
 
 <Meta
@@ -101,7 +102,7 @@ export const Template = () => {
 # Generic icon
 
 ## Component API
-<ArgsTable of={GenericIcon} />
+<ArgsTable of={GenericIcon_} />
 
 ## Generic icon example
 
